# pk-project

./: .coveragerc  .readthedocs.yaml  README.md  conf.py  index.rst  pk_main.py  pyproject.toml
.github/workflows/: coverage.yml  os-tests.yml  unit-tests.yml
docs/: conf.py  documentation.rst  examples.rst  index.rst  scientific background.rst
nerc_pk_project/: compartments.py  dose.py  inputs.py  model.py  plot.py  solver.py
nerc_pk_project/tests/: test_createmodel.py  test_model.py  test_solution.py
pkmodel/: Solution.py  __init__.py  check_inputs.py  compartments.py  createmodel.py  dose.py  inputs.py  model.py  pk_main.py  pk_main_2.py  plot.py  solution.py  solver.py
pkmodel/classes/: dose.py
pkmodel/examples/: inputs_e1.py  inputs_e2.py
pkmodel/tests/: test_compartments.py  test_createmodel.py  test_dose.py  test_model.py  test_plot.py  test_solution.py
